# monkey-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
benchmarks/: baseline.md
docs/: LANGUAGE.md  STDLIB.md
editors/vscode/: README.md  extension.js  package.json
examples/: json_parse_demo.monkey  rainwater_stack.monkey  stdlib_demo.monkey  vm_demo.monkey
examples/benchmarks/: closure_counter.monkey  for_in_list.monkey  function_loop.monkey  function_recursion.monkey  import_stdlib.monkey  json_parse.monkey  while_sum.monkey
examples/lanternbound/: battle.monkey  enemies.monkey  goals.monkey  items.monkey  main.monkey  maps.monkey  patterns.monkey  renderer.monkey  save.monkey  story.monkey  tiles.monkey  ui.monkey  world.monkey
scripts/: bench-vm.sh  check.sh  ci.sh  dump-vm.sh  generate-stdlib-docs.py  generate-stdlib-docs.sh  profile-vm.sh  release-build.ps1  release-build.sh  run-example.sh  run-vscode-extension.sh  run_example.bat  test.sh
src/: ast.rs  buildin.rs  builtin.rs  error.rs  evaluator.rs  formatter.rs  lang_service.rs  lang_service_builtins.rs  language_tests.rs  lexer.rs  main.rs  map_key.rs  object.rs  parser.rs  repl.rs  test.monkey  token.rs  vm.rs
src/vm/: builtin_catalog.rs  builtins.rs  calls.rs  compiler.rs  dump.rs  env.rs  executor.rs  frame.rs  heap.rs  hir.rs  imports.rs  names.rs  (+7 more)
stdlib/: encoding.monkey  env.monkey  fs.monkey  http.monkey  io.monkey  json.monkey  list.monkey  map.monkey  math.monkey  path.monkey  prelude.monkey  process.monkey  random.monkey  string.monkey  terminal.monkey  time.monkey
(+5 files in other folders)
